--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="HardcodedText"
-    tools:context="${relativePackage}.${activityClass}" >
+    tools:context="${relativePackage}.${activityClass}"
+    tools:ignore="HardcodedText" >
 
     <TextView
         android:id="@+id/main_tv1"
@@ -17,5 +17,20 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/main_tv1"
         android:text="hello world" />
+
+    <Button
+        android:id="@+id/main_btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_tv2"
+        android:text="click"
+        android:textSize="20sp" />
+
+    <FrameLayout
+        android:id="@+id/main_fragmentContainer"
+        android:layout_below="@id/main_btn1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </FrameLayout>
 
 </RelativeLayout>
