--- a/res/layout/fragment_fg1.xml
+++ b/res/layout/fragment_fg1.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/fg1_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="hello fragment"
